--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
-title: jekyll-rtd-theme
-description: Just another documentation theme compatible with GitHub Pages
-
+title: 正秋一中学生档案办公室
+description: Harder,Better,Faster,Stronger
 theme: null
 
 # debug:
